[gd_scene load_steps=2 format=3 uid="uid://clqjpoj3b55dc"]

[ext_resource type="Script" uid="uid://c6n5pmn3s82vj" path="res://scripts/Menu/registration.gd" id="1_dqccb"]

[node name="Registration" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dqccb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.41598, 0.41598, 0.41598, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 80.0
offset_top = 6.0
offset_right = 589.0
offset_bottom = 44.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="Email" type="TextEdit" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Email or user name"

[node name="UserName" type="TextEdit" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Username"

[node name="Password" type="TextEdit" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Password"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Login" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Login"

[node name="Register" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Register"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Register" to="." method="_on_register_pressed"]
